prusti-tests/tests/verify/ui/type-cond-specs/invalid-trait-refinement-1.stderr
error: [Prusti: verification error] the method's precondition may not be a valid weakening of the trait's precondition.
  --> $DIR/invalid-trait-refinement-1.rs:16:31
   |
16 |       #[refine_spec(where Self: HasContract, [
   |  _______________________________^
17 | |         requires(self.pre()), ensures(self.post())
   | |___________________________^
...
28 |       #[requires(self.x >= 15)]
   |                  ^^^^^^^^^^^^
   |
   = help: The trait's precondition should imply the implemented method's precondition.

error: aborting due to previous error

